package edu.fiuba.algo3.modelo.aleatorio;

public interface Ejecucion {
    void ejecuta(Runnable accion);
}
