@startuml


package aleatorio {
    interface Ejecucion
}

package comodin {
    interface Modificador
}


package juego {
    abstract class Juego
}


package naipes {
    package carta {
        interface Carta
    }
}

package puntaje {
    class Puntaje
}

package ronda {
    class Ronda
}

package tarot {
    interface Tarot
}

package tienda {
    interface Tienda
}

ronda ..> puntaje
ronda ..> naipes
ronda ..> tienda

tarot ..> puntaje
tarot ..> juego

comodin ..> aleatorio
comodin ..> juego
comodin ..> puntaje

juego .up.> puntaje
juego ..> carta

tienda ..> comodin
tienda ..> tarot
tienda ..> carta



@enduml
